<resources>
    <string name="app_name">CIS298Assignment3</string>

    <string name="action_settings">Settings</string>

    <string name="beverage_name_hint">Enter a name for the beverage.</string>
    <string name="beverage_pack_hint">Enter a pack for the beverage.</string>
    <string name="beverage_price_hint">Enter a price for the beverage.</string>
    <string name="beverage_id_label">ID</string>
    <string name="beverage_name_label">Name</string>
    <string name="beverage_pack_label">Pack</string>
    <string name="beverage_price_label">Price</string>
    <string name="beverage_active_label">Active</string>

</resources>
